# rubyfast

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
examples/: prism_spike.rs
src/: analyzer.rs  ast_helpers.rs  ast_visitor.rs  cli.rs  comment_directives.rs  config.rs  file_traverser.rs  fix.rs  lib.rs  main.rs  offense.rs  output.rs
src/scanner/: for_loop_scanner.rs  method_call_scanner.rs  method_definition_scanner.rs  mod.rs  rescue_scanner.rs
tests/fixtures/: 01_shuffle_first.rb  02_select_first.rb  03_select_last.rb  04_reverse_each.rb  05_keys_each.rb  06_map_flatten.rb  07_gsub_vs_tr.rb  08_sort_vs_sort_by.rb  09_fetch_with_argument.rb  10_hash_merge_bang.rb  11_block_vs_symbol_to_proc.rb  12_each_with_index.rb  13_include_vs_cover.rb  14_module_eval.rb  14b_module_eval_heredoc.rb  15_rescue_vs_respond_to.rb  16_proc_call_vs_yield.rb  17_getter_vs_attr_reader.rb  18_setter_vs_attr_writer.rb  19_for_loop.rb  20_inline_disable.rb  clean.rb
tests/integration/: cli_tests.rs  fixture_tests.rs  mod.rs
