[package]
name = "rubyfast"
version = "1.1.0"
edition = "2021"
description = "A Ruby performance linter rewritten in Rust"
license = "MIT"

[dependencies]
lib-ruby-parser = "4.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1.10"
colored = "2"
glob = "0.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
