[package]
name = "rubyfast"
version = "1.2.2"
edition = "2024"
description = "An ultra-fast Ruby performance linter rewritten in Rust — detects 19 common anti-patterns"
license = "MIT"
repository = "https://github.com/7a6163/rubyfast"
homepage = "https://github.com/7a6163/rubyfast"
keywords = ["ruby", "linter", "performance", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
lib-ruby-parser = "4.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1.10"
colored = "2"
glob = "0.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
